<resources>
    <string name="app_name">DatePoll</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Max</string>
    <string name="nav_header_subtitle">m.musterman</string>
    <string name="action_settings">Settings</string>
    <string name="user_settings">User</string>
    <string name="menu_calendar">Calendar</string>
    <string name="settings_home_fragment">fragmentSettingsHome</string>
    <string name="settings">Settings</string>
    <string name="logo_description">Logo of Datepoll</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logo">Logo</string>
    <string name="logout_title">Logout</string>
    <string name="logout_dialog_desc">Do you really want to logout?</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="surname">Surname</string>
    <string name="firstname">Firstname</string>
    <string name="title">Title</string>
    <string name="birthday">Birthday</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="domain">Domain</string>
    <string name="more">more</string>
    <string name="set">set</string>
    <string name="port">Port</string>
    <string name="advanced">Advanced</string>
    <string name="personal_data">Personal data</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="general">General</string>
    <string name="street_number">Street number</string>
    <string name="birthdays_in_this_month">Birthdays in this month</string>
    <string name="bookings">Bookings</string>
    <string name="events">Events</string>
    <string name="example_date_time">01–01–2020 18:33:00</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="could_not_load_data">Could not load data</string>
    <string name="testmovie">Testmovie</string>
    <string name="_10_10_2019">10.10.2019</string>
    <string name="booked_seats">Reserved cards:</string>
    <string name="emergency_duty">Emergency duty:</string>
    <string name="duty">Duty:</string>
    <string name="report_for_duty">Report for duty</string>
    <string name="report_for_emergency_duty">Report for emergency duty</string>
    <string name="_4">4</string>
    <string name="yes">yes</string>
    <string name="maybe">maybe</string>
    <string name="no">no</string>
    <string name="theme">Theme</string>
    <string name="phone_number">Phone number</string>
    <string name="label">Label</string>
    <string name="change_email">Change email</string>
    <string name="email">Email</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="something_went_wrong">Ups… something went wrong</string>
    <string name="could_not_delete_min_one">Could not delete item, because minimum one email must exist</string>
    <string name="ok">OK</string>
    <string name="security">Security</string>
    <string name="change_password">Change password</string>
    <string name="manage_sessions">Manage sessions</string>
    <string name="manage_calendar">Manage calendar</string>
    <string name="action">Action</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="old_password">Old password</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="checked">Checked</string>
    <string name="circle">Circle</string>
    <string name="password_min_six_char">Password must have min. 6 characters</string>
    <string name="calendar_token">Calendar token</string>
    <string name="reset_token">Reset token</string>
    <string name="close">Close</string>
    <string name="url_incorrect">This is no correct URL</string>
    <string name="check">Check</string>
    <string name="https">https://</string>
    <string name="scan_info">Scan the QR code of your Datepoll service</string>
    <string name="event_management">Event management</string>
    <string name="movieticket">Movieticket</string>
    <string name="cinema_duty">Cinema duty</string>
    <string name="movie_management">Movie management</string>
    <string name="remove_answer">Remove</string>
    <string name="answer">Answer</string>
    <string name="feature_soon">Feature will be available soon :D</string>
    <string name="cinema">Cinema</string>

    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="home">Home</string>
    <string name="licence">Licence</string>

    <string-array name="licences">
        <item>https://github.com/junit-team/junit5|JUnit</item>
        <item>https://android.googlesource.com/platform/frameworks/support/+/androidx-master-dev|AndroidX</item>
        <item>https://github.com/material-components/material-components-android|Material Components</item>
        <item>https://github.com/square/moshi|Moshi</item>
        <item>https://github.com/square/retrofit|Retrofit</item>
        <item>https://github.com/square/okhttp|OkHttp</item>
        <item>https://github.com/InsertKoinIO/koin|Koin</item>
        <item>https://github.com/zxing/zxing|Zxing</item>
        <item>https://github.com/journeyapps/zxing-android-embedded|Zxing-Embadded</item>
        <item>https://github.com/Applandeo/Material-Calendar-View|Material-Calendar-View</item>
        <item>https://github.com/JakeWharton/timber|Timber</item>
        <item>https://github.com/bumptech/glide|Glide</item>
    </string-array>

    <string name="choose">Choose</string>
    <string name="choose_instance">Choose instance:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="demo_datepoll_org">demo.datepoll.org</string>
    <string name="or">or</string>
    <string name="manual_input">Manual input:</string>
    <string name="no_birthdays_in_this_month">No birthdays in this month</string>
    <string name="first_login_please_set_a_password">First login, please set a password:</string>
    <string name="show_your_birthday_in_public_list">Show your Birthday in public list</string>
    <string name="privacy">Privacy</string>
    <string name="show_answered_events">Show answered events</string>
    <string name="movie_picture">Movie picture</string>
    <string name="submit">Submit</string>
    <string name="book">book</string>
    <string name="tickets">Tickets:</string>
    <string name="you_booked">You booked:</string>
    <string name="available_tickets">Available tickets:</string>
    <string name="sold_out">!SOLD OUT!</string>
    <string name="you_booked_x_tickets">You booked %1$s tickets.</string>
    <string name="movie_worker_details">Movie worker</string>
    <string name="info_for_date">Info for %1$s</string>
    <string name="no_bookings">No bookings.</string>
    <string name="reservations">Reservations:</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="delete_decision">Delete decision</string>
    <string name="nothing_here">Nothing here.</string>
    <string name="currently_there_are_no_movies">Currently there are no movies</string>
    <string name="currently_there_are_no_events">Currently there are no events</string>
</resources>
