<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_assessment"
        android:title="@string/events" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_event"
        android:title="@string/menu_calendar" />
    <item
        android:id="@+id/nav_cinema"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/cinema" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>
