<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="vm"
            type="com.bke.datepoll.vm.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentServeRInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.ServerInputFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetServer"
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="36dp"
            android:text="@string/set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advancedServerSettings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShowMoreServer"
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="32dp"
            android:drawableLeft="@drawable/ic_arrow_drop_down_white"
            android:paddingStart="5dp"
            android:text="@string/more"
            app:iconPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tiServerDomain"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiServerDomain"
            style="@style/LoginInputField"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/domain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:text="@={vm.serverAddress}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loadingServer"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loadingServer"
            app:srcCompat="@drawable/ic_icon" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="200dp"
            android:text="@string/advanced"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiServerDomain" />

        <LinearLayout
            android:id="@+id/advancedServerSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiServerDomain">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiServerPort"
                style="@style/LoginInputField"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:hint="@string/port">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:text="@={vm.serverPortDisplay}" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>